--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv",
   "title": "Nina Metodieva’s CV",
   "description": "Nina Metodieva’s CV",
+  "short_title": "Nina’s CV",
   "version": "2.2.0",
   "license": "UNLICENSED",
   "repository": {
