Update "title" in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cv",
-  "title": "Nina Metodieva’s CV",
   "description": "Nina Metodieva’s CV",
+  "title": "Nina Metodieva’s professional CV",
   "short_title": "Nina’s CV",
   "version": "2.2.0",
   "license": "UNLICENSED",
