--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - 14
 script:
 - yarn generate
+- printf 'nina.metodiev.pro' > dist/CNAME
 - cp 'README.md' dist
 before_install:
   - openssl aes-256-cbc -K $encrypted_394136aef2ef_key -iv $encrypted_394136aef2ef_iv -in .env.enc -out .env -d
