Change domain to nina.metodieva.pro

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "type": "git",
     "url": "git://github.com/ninametodieva/cv.git"
   },
-  "homepage": "https://nina.metodiev.pro",
+  "homepage": "https://nina.metodieva.pro",
   "author": {
     "name": "Nina Metodieva",
     "email": "nixy.petrova@gmail.com",
-    "url": "https://nina.metodiev.pro"
+    "url": "https://nina.metodieva.pro"
   },
   "private": true,
   "keywords": [
